# ha-picnic-api

./: .gitignore  README.md  README.rst  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: cd.yaml  ci.yaml
ha_picnic_api/: __init__.py  client.py
integration_tests/: test_client.py  test_helper.py  test_session.py
tests/: test_client.py  test_session.py
