[tool.poetry]
name = "ha-picnic-api"
version = "0.1.0"
description = ""
license = "Apache-2.0"
authors = ["Mike Brink <mjh.brink@icloud.com>", "corneyl"]
readme = "README.md"
repository = "https://github.com/ha-pypi/ha-picnic-api"

[tool.poetry.dependencies]
python = ">=3.12"
requests = "2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.4"
ruff = "0.9.6"
black = "25.1.0"
python-dotenv = "1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
