[project]
dynamic = ["version"]

[tool.poetry]
name = "ha-picnic-api"
description = ""
license = "Apache-2.0"
authors = ["Mike Brink <mjh.brink@icloud.com>", "corneyl"]
readme = "README.md"
repository = "https://github.com/ha-pypi/ha-picnic-api"
version = "0.0.0"

[tool.poetry.dependencies]
python = ">=3.12"
requests = "2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.4"
ruff = "0.9.7"
black = "25.1.0"
python-dotenv = "1.0.1"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
format-jinja = "{% if distance == 0 %}{{ base }}{% else %}{{ base }}+{{ distance }}.{{ commit }}{% endif %}"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
